fix: 로그인 페이지 findBox 컴포넌트에 Margin-top, align-items:center 추가

--- a/src/pages/LoginPage/page/login.module.scss
+++ b/src/pages/LoginPage/page/login.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 15px;
 }
 
 .InputBox {
@@ -17,6 +18,7 @@
 .FindBox {
   width: 326px;
   flex-grow: 1;
+  margin-top: 10px;
 }
 
 .ButtonBox {
